# blog-app

./: .gitignore  404.html  README.md  index.html  manifest.json
.github/workflows/: deploy-frontend.yml  django.yml  pages.yml
assets/: index-BIPAlES1.js  index-BQRi_jE_.js  index-BXGh_3uy.js  index-BXTCT2BJ.js  index-BZZLAVdf.js  index-BkeDLO0t.js  index-C1MVLQlq.js  index-CDvzsHcZ.js  index-CKwvWwbJ.js  index-Cav0u1HI.js  index-CkykgY5x.css  index-Cq6tD3Mz.js  index-D1g18y1W.css  index-DCrIsigZ.css  index-DZPkjAoY.js  index-Didvv3mg.css  index-DwnUSU2B.js  index-E9HuEJkt.css  index-OjIa24Qz.js  index-bjI_iJDI.js  index-fYrFks-C.css  index-flOZY7hd.js  index-j7n8zE78.js  index-khA18iK8.js  index-lsyIp-dC.js  index-plBOyvPW.css  index-qKgA_8OW.css  index-ve1K57iy.js  vendor-0Snx-3gQ.js  vendor-BViA_qfX.js  vendor-CKwNIQf4.js  vendor-EbUnhbAf.css  vendor-_UusHcck.js
backend/: db.sqlite3  manage.py  pyproject.toml  requirements.txt
backend/blog_app/: asgi.py  settings.py  urls.py  wsgi.py
backend/posts/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_blogpost_description.py
backend/users/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/: App.jsx  i18n.js  icons.jsx  main.jsx  urls.js
locales/en/: translation.json
locales/pl/: translation.json
(+24 files in other folders)
