[project]
name = "blog-app"
version = "1.0.0"
authors = [
  { name="mldxo", email="miloszmaculewicz@gmail.com" },
]
description = "Blog App Backend"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
  "django",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
